--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -172,6 +172,81 @@
 }
 
 
+@inproceedings{belkin2018understand,
+	title={To understand deep learning we need to understand kernel learning},
+	author={Belkin, Mikhail and Ma, Siyuan and Mandal, Soumik},
+	booktitle={International Conference on Machine Learning},
+	pages={541--549},
+	year={2018},
+	organization={PMLR}
+}
+
+@article{belkin2019reconciling,
+	title={Reconciling modern machine-learning practice and the classical bias--variance trade-off},
+	author={Belkin, Mikhail and Hsu, Daniel and Ma, Siyuan and Mandal, Soumik},
+	journal={Proceedings of the National Academy of Sciences},
+	volume={116},
+	number={32},
+	pages={15849--15854},
+	year={2019},
+	publisher={National Acad Sciences}
+}
+
+
+@article{beaglehole2022kernel,
+	title={Kernel Ridgeless Regression is Inconsistent for Low Dimensions},
+	author={Beaglehole, Daniel and Belkin, Mikhail and Pandit, Parthe},
+	journal={arXiv preprint arXiv:2205.13525},
+	year={2022}
+}
+
+@book{williams2006gaussian,
+	title={Gaussian processes for machine learning},
+	author={Williams, Christopher KI and Rasmussen, Carl Edward},
+	volume={2},
+	number={3},
+	year={2006},
+	publisher={MIT press Cambridge, MA}
+}
+
+@article{fasshauer2011positive,
+	title={Positive definite kernels: past, present and future},
+	author={Fasshauer, Gregory E},
+	journal={Dolomites Research Notes on Approximation},
+	volume={4},
+	pages={21--63},
+	year={2011}
+}
+
+
+@article{shahriari2015taking,
+	title={Taking the human out of the loop: A review of Bayesian optimization},
+	author={Shahriari, Bobak and Swersky, Kevin and Wang, Ziyu and Adams, Ryan P and De Freitas, Nando},
+	journal={Proceedings of the IEEE},
+	volume={104},
+	number={1},
+	pages={148--175},
+	year={2015},
+	publisher={IEEE}
+}
+
+@article{snoek2012practical,
+	title={Practical bayesian optimization of machine learning algorithms},
+	author={Snoek, Jasper and Larochelle, Hugo and Adams, Ryan P},
+	journal={Advances in neural information processing systems},
+	volume={25},
+	year={2012}
+}
+
+@article{wilson2018maximizing,
+	title={Maximizing acquisition functions for Bayesian optimization},
+	author={Wilson, James and Hutter, Frank and Deisenroth, Marc},
+	journal={Advances in neural information processing systems},
+	volume={31},
+	year={2018}
+}
+
+
 
 
 
